--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -15,8 +15,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -29,38 +30,55 @@
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
-
+    <script type="text/javascript" src="{{ ASSET_PATH }}/js/modernizr.min.js"></script>
   </head>
 
   <body>
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container-narrow">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <ul class="nav">
-            {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
-            {% include JB/pages_list %}
-          </ul>
-        </div>
+    <div class="container">
+      <div class="navbar">
+        <a class="brand" href="{{ HOME_PATH }}">
+          <img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" />
+        </a>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Experience</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Team</a></li>
+        </ul>
       </div>
     </div>
-
-    <div class="container-narrow">
+    <div class="container">
 
       <div class="content">
         {{ content }}
       </div>
-      <hr>
-      <footer>
+      <!-- <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
-      </footer>
+      </footer> -->
 
     </div>
 
     {% include JB/analytics %}
+    <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>    
+    <script>
+
+      // Create a map
+
+
+
+      // Create a layer
+      var layer = mapbox.layer().id('examples.map-zgrqqx0w');
+      var map = mapbox.map('map', layer, null, []);
+      // Add the layer
+      map.addLayer(layer);
+      map.centerzoom({lat:45.5236, lon: -122.6750 - 1 },7);
+
+      // Attribute
+      map.ui.attribution.add()
+          .content('<a href="http://mapbox.com/about/maps">Terms &amp; Feedback</a>');
+
+    </script>
   </body>
 </html>
