--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : twitter
+  name : p97
 ---
 {% include JB/setup %}
-{% include themes/twitter/default.html %}
+{% include themes/p97/default.html %}
