--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -16,7 +16,7 @@
 
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
-    <link href="{{ ASSET_PATH }}/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
 
     <!-- Le fav and touch icons -->
@@ -61,23 +61,47 @@
     {% include JB/analytics %}
     <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>    
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script>
 
+
       // Create a map
-
-
-
       // Create a layer
       var layer = mapbox.layer().id('examples.map-zgrqqx0w');
       var map = mapbox.map('map', layer, null, []);
+      var center = {lat: 30, lon: -45 };
       // Add the layer
       map.addLayer(layer);
-      map.centerzoom({lat:45.5236, lon: -122.6750 - 1 },7);
+      map.centerzoom(center,2);
 
       // Attribute
       map.ui.attribution.add()
           .content('<a href="http://mapbox.com/about/maps">Terms &amp; Feedback</a>');
+
+      var $geocarousel = $('#geocarousel').carousel({
+        interval: 8000
+      });
+      $geocarousel.on('slide.bs.carousel', function (e) {
+        var $slide = $(e.relatedTarget);
+        var lat = $slide.data('lat');
+        var lng = $slide.data('lng');
+        var zoom = $slide.data('zoom') || 7;
+        console.log(zoom);
+        if (lat && lng) {
+          map.ease.location({ lat: lat, lon: lng - 1 }).zoom(zoom).optimal();
+        } else {
+          map.ease.location(center).zoom(2).optimal();
+        }
+      });
+
+      $("body").keydown(function(e) {
+        if(e.keyCode == 37) { // left
+          $geocarousel.carousel('prev');
+        }
+        else if(e.keyCode == 39) { // right
+          $geocarousel.carousel('next');
+        }
+      });
 
     </script>
   </body>
