--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -41,6 +41,7 @@
         </a>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Experience</a></li>
+          <li><a href="#">Products</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Team</a></li>
         </ul>
@@ -67,13 +68,13 @@
 
       // Create a map
       // Create a layer
-      var layer = mapbox.layer().id('examples.map-zgrqqx0w');
-      var map = mapbox.map('map', layer, null, []);
-      var center = {lat: 30, lon: -45 };
+      // 
+      var map = mapbox.map('map', null, null, []);
+      var center = {lat: 45, lon: -123 };
       // Add the layer
-      map.addLayer(layer);
+      map.addLayer(new MM.TemplatedLayer('http://tilestream.apps.ecotrust.org/v2/magrish/{Z}/{X}/{Y}.png'));
       map.centerzoom(center,2);
-
+      map.ease.location(center).zoom(5).optimal();
       // Attribute
       map.ui.attribution.add()
           .content('<a href="http://mapbox.com/about/maps">Terms &amp; Feedback</a>');
@@ -90,7 +91,7 @@
         if (lat && lng) {
           map.ease.location({ lat: lat, lon: lng - 1 }).zoom(zoom).optimal();
         } else {
-          map.ease.location(center).zoom(2).optimal();
+          map.ease.location(center).zoom(5).optimal();
         }
       });
 
