--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -1,3 +1,14 @@
+html, body, .stretch {
+    height: 100%;
+    
+}
+.wide {
+    width: 100%;
+    margin: 0 !important;
+    max-width: 100%;
+    padding: 0 !important;
+}
+
 .navbar {
     margin-top: 30px;
     z-index: 1000;
@@ -20,25 +31,26 @@
     color: white;
     background-color: inherit;
 }
+
 #carousel-wrapper {
-    position: absolute;
+    /*position: absolute;
     top: 0;
-    left: 0;
+    left: 0;*/
     width: 100%;
     height: 100%;
 }
 #map {
     position: absolute;
-    height: 100%;
+    height: 90%;
     width: 100%;
     top: 0;
 }
 #carousel-wrapper .carousel, #carousel-wrapper .carousel .carousel-inner, #carousel-wrapper .carousel .item, #carousel-wrapper .carousel .container {
-    height: 100%;
+    height: 75%;
     width: 100%;
 }
 	.carousel .lens {
-		top: 25%;
+		top: 10%;
 		border: 5px solid white;
 		height: 50%;
 		min-height: 400px;
