--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -1,7 +1,31 @@
+@font-face {
+    font-family: 'museo_sans_500regular';
+    src: url('../font/MuseoSans_500-webfont.eot');
+    src: url('../font/MuseoSans_500-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/MuseoSans_500-webfont.woff') format('woff'),
+         url('../font/MuseoSans_500-webfont.ttf') format('truetype'),
+         url('../font/MuseoSans_500-webfont.svg#museo_sans_500regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+html, body {
+    height: 100%;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'museo_sans_500regular' !important;
+}
+
 .navbar {
     margin-top: 30px;
     z-index: 1000;
     background-color: inherit !important;
+    position: absolute !important;
+    width: 85%;
 }
 .navbar .brand {
     height: 170px;
@@ -10,6 +34,7 @@
     float: right;
 }
 .navbar .navbar-nav a{
+    font-family: 'museo_sans_500regular' !important;
 	color: white;
 	font-size: 24px;
 	text-transform: uppercase;
@@ -20,11 +45,40 @@
     color: white;
     background-color: inherit;
 }
+.navbar .widget {
+    position: relative;
+}
+    .navbar .widget span {
+        position: absolute;
+    }
+.navbar .widget .number {
+    font-size: 16px;
+    left: 35px;
+    top: 15px;
+
+}
+
+.navbar .widget .climacon {
+    font-size: 32px;
+    left: 10px;
+    top: 8px;
+}
 #carousel-wrapper {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
+    
+}
+
+.blue {
+    color: rgb(31, 150,169);
+}
+.root {
+    height: 85%;
+}
+.root .content {
     height: 100%;
 }
 #map {
@@ -39,9 +93,10 @@
 }
 	.carousel .lens {
 		top: 25%;
+        bottom: auto;
 		border: 5px solid white;
-		height: 50%;
-		min-height: 400px;
+		height: 400px;
+        overflow: hidden;
 		padding: 0 0;
 		margin-top: 0;
 		color: black;
@@ -53,6 +108,7 @@
 		font-size: 22px;
 		text-transform: uppercase;
 		margin-bottom: 5%;
+        text-align: left;
 	}
 	.carousel .lens p {
 		text-align: left;
