--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -53,7 +53,7 @@ h1,h2,h3,h4,h5,h6 {
     }
 .navbar .widget .number {
     font-size: 16px;
-    left: 35px;
+    left: 38px;
     top: 15px;
 
 }
@@ -80,6 +80,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 .root .content {
     height: 100%;
+}
+.map-attribution {
+    display: none;
 }
 #map {
     position: absolute;
