full set of climacon mappings

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-md-4">
           <h3>Get In Touch</h3>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>Interrogas me, et non quaestiones dicam non jacet.</p>
           <p><strong>Call</strong> {{ site.author.phone }}</p>
           <p><strong>Email</strong> {{ site.author.email }}</p>
        </div>
@@ -82,6 +82,8 @@
     <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
 </html>
