--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <h2>Cutting edge technology solutions for <span class="blue">marine</span> &amp; coastal communities.</h2>
+          <h2>Technology solutions and engagement strategies for <span class="blue">marine</span> &amp; coastal planning.</h2>
         </div>
         <div class="col-md-4">
           <h3>Get In Touch</h3>
