--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -46,7 +46,12 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">Team</a></li>
           <li class="widget">
-            <a href="#"><span id="climate-icon" class="climacon cloud" aria-hidden="true" style="color: white;"></span><span class="number">64&deg;</span></a>
+            <a href="#"><table>
+              <tr>
+                <td><span id="climate-icon" class="climacon cloud" aria-hidden="true"></span></td>
+                <td><span class="number">64&deg;</span></td>
+              </tr>
+            </table></a>
           </li>
         </ul>
       </div>
