--- a/_includes/themes/p97/page.html
+++ b/_includes/themes/p97/page.html
@@ -1,5 +1,31 @@
-<div class="root">
-  <div class="content">
-    {{ content }}
-  </div>
+<div id="map" class="short-map" data-lat="{{ page.lat }}" data-lng="{{ page.lng }}"></div>
+<div class="container">
+    <div class="row-fluid post-full">
+        <div class="span12">
+        <div class="content">
+            <h1>{{ page.title }}</h1>
+            <div class="row-fluid">
+                <div class="col-md-8">
+                    {{ content }}
+                </div>
+            </div>
+        </div>
+
+        <!-- {% unless page.categories == empty %}
+      <ul class="tag_box inline">
+        <li><i class="icon-folder-open"></i></li>
+        {% assign categories_list = page.categories %}
+        {% include JB/categories_list %}
+      </ul>
+    {% endunless %}  
+
+    {% unless page.tags == empty %}
+      <ul class="tag_box inline">
+        <li><i class="icon-tags"></i></li>
+        {% assign tags_list = page.tags %}
+        {% include JB/tags_list %}
+      </ul>
+    {% endunless %}   -->
+        </div>
+    </div>
 </div>
