hiding weather initially

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -48,8 +48,8 @@
             <a href="#">
             <table>
               <tr>
-                <td><span id="climate-icon" class="climacon cloud" aria-hidden="true"></span></td>
-                <td><span class="number">64&deg;</span></td>
+                <td><span id="climate-icon" class="climacon" aria-hidden="true"></span></td>
+                <td><span class="number"></span></td>
               </tr>
             </table></a>
             <!-- <div class="weather-window">stuff</div> -->
