experience page with placeholders

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -68,7 +68,7 @@
           <h3>Get In Touch</h3>
           <p>Et ego vobis dicam in qua nolite a me, non est quaestio.</p>
           <p><strong>Call</strong> {{ site.author.phone }}</p>
-          <p><strong>Email</strong> {{ site.author.email }}</p>
+          <p><strong>Email</strong> <a href="mailto:{{site.author.email}}">{{ site.author.email }}</a>\</p>
        </div>
       </div>
     <div class="row">
