--- a/_includes/themes/p97/page.html
+++ b/_includes/themes/p97/page.html
@@ -8,6 +8,9 @@
                 <div class="col-md-8">
                     {{ content }}
                 </div>
+                <div class="col-md-4">
+                	<img src="http://lorempixel.com/g/400/700/animals/5">
+                </div>
             </div>
         </div>
 
