--- a/_includes/themes/p97/post.html
+++ b/_includes/themes/p97/post.html
@@ -12,6 +12,8 @@
                     <p>{{ page.blurb }}</p>
                     {{ content }}
                 </div>
+                <div class="col-md-4">
+                </div>
             </div>
         </div>
 
