moving posts around, fading widget

--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -13,21 +13,21 @@
 
 iframe {
     background-color: rgb(32,85,57);
-    -webkit-transition: opacity 0.5s ease-in-out;
-    -moz-transition: opacity 0.5s ease-in-out;
-    transition: opacity 0.5s ease-in-out;
     pointer-events: nonete;
 }
 
-a:link, a:hover {
-    text-decoration: none!important;
-       color: rgb(31, 150,169) !important;
+
+
+.faded {
+    opacity: 1;
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
-.hidden {
-    opacity: 0;
+.fade-out {
+ opacity: 0;   
 }
-
 html, body {
     height: 100%;
 }
@@ -67,11 +67,13 @@ h1,h2,h3,h4,h5,h6 {
     
 }
 .navbar .widget {
-    margin-top: -8px;
+    margin-top: 0px;
     width: 65px;
+    color: white;
 }
 .navbar .widget .number {
-    font-size: 16px;
+    font-size: 18px;
+    margin-top: -5px;
 }
 
 .navbar .widget .climacon {
@@ -242,4 +244,10 @@ h1,h2,h3,h4,h5,h6 {
 
 .thumbnail img {
     min-height: 100px;
+}
+
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+    .navbar {
+        width: 90% !important;
+    }
 }
