--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -44,14 +44,13 @@
           {% assign pages_list = site.pages %}
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
-          <li class="widget">
-            <a href="#">
+          <li class="widget faded fade-out">
             <table>
               <tr>
                 <td><span id="climate-icon" class="climacon" aria-hidden="true"></span></td>
                 <td><span class="number"></span></td>
               </tr>
-            </table></a>
+            </table>
             <!-- <div class="weather-window">stuff</div> -->
           </li>
         </ul>
