--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -17,8 +17,8 @@
     <!-- Le styles -->
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/font/climacons-font.css" rel="stylesheet" type="text/css" media="all">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
+    <link href="{{ ASSET_PATH }}/lib/css/bootstrap.min.css" rel="stylesheet">
+    <link href='{{ ASSET_PATH }}/lib/css/mapbox.css' rel='stylesheet' />
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
@@ -45,12 +45,25 @@
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
           <li class="widget faded fade-out">
-            <table>
+            <a class="dropdown-toggle" data-toggle="dropdown"><table>
               <tr>
                 <td><span id="climate-icon" class="climacon" aria-hidden="true"></span></td>
                 <td><span class="number"></span></td>
               </tr>
-            </table>
+            </table></a> 
+            <ul class="dropdown-menu pull-right">
+            <li class="dropdown">
+              <div class="row-fluid">
+                <div class="col-xs-8 image-box">
+                    <img src="http://lorempixel.com/g/250/200/nature/">
+                  <div class="caption">Stuff</div>
+                </div>
+                <div class="col-xs-4">
+                  stuff
+                </div>
+              </div>
+            </li>
+          </ul>
             <!-- <div class="weather-window">stuff</div> -->
           </li>
         </ul>
@@ -78,10 +91,10 @@
     </div>
     </div>
     {% include JB/analytics %}
-    <script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
+    <script src='{{ ASSET_PATH }}/lib/js/mapbox.js'></script>
+    <script src="{{ ASSET_PATH }}/lib/js/jquery.min.js"></script>
+    <script src="{{ ASSET_PATH }}/lib/js/bootstrap.min.js"></script>
+    <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
