--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -59,7 +59,7 @@
                   <div class="caption">Stuff</div>
                 </div>
                 <div class="col-xs-4">
-                  stuff
+                  Weather!
                 </div>
               </div>
             </li>
