--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -280,8 +280,20 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 @media (min-width: 1340px) {
+    .container {
+        max-width: 1300px !important;
+    }
     .navbar {
         width: 79% !important;
+    }
+    .navbar .brand img {
+        height: 120px;
+    }
+    .navbar .navbar-nav {
+        margin-top: 36px;
+    }
+    .navbar .navbar-nav a {
+        font-size: 32px;
     }
 }
 
@@ -307,12 +319,13 @@ h1,h2,h3,h4,h5,h6 {
         margin-top: 0;
     }
     .root {
-        height: 75% !important;
+        height: 74% !important;
     }
     .root .carousel .carousel-caption {
         right: 7%;
         left: 7%;
-        height: 525px;
+        height: 490px;
+        top:  23%;
     }
 }
 /*  and (orientation:landscape)*/
