iphone responsive layout

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container nav-container">
       <div class="navbar">
         <a class="brand" href="{{ HOME_PATH }}">
           <img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" />
