--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -44,8 +44,8 @@ h1,h2,h3,h4,h5,h6 {
     margin-top: 20px;
     z-index: 1000;
     background-color: inherit !important;
-/*    position: absolute !important;
-*/    width: 85%;
+    position: absolute !important;
+    width: 85%;
 }
 .navbar .brand {
     height: 170px;
