--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -424,7 +424,7 @@ h1,h2,h3,h4,h5,h6 {
       margin-top: 10px;
   }
   .root {
-      height: 82% !important;
+      height: 400px !important;
   }
   .root .carousel .carousel-caption {
       right: 7%;
