--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -9,6 +9,7 @@
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -80,7 +81,7 @@
           <h3>Get In Touch</h3>
           <p>Et ego vobis dicam in qua nolite a me, non est quaestio.</p>
           <p><strong>Call</strong> {{ site.author.phone }}</p>
-          <p><strong>Email</strong> <a href="mailto:{{site.author.email}}">{{ site.author.email }}</a>\</p>
+          <p><strong>Email</strong> <a href="mailto:{{site.author.email}}">{{ site.author.email }}</a></p>
        </div>
       </div>
     <div class="row">
