perhaps fixing orientation problem

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -98,6 +98,7 @@
     <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
     <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
+    <script src="{{ ASSET_PATH }}/js/orientation.js"></script>
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
 </html>
