--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -96,8 +96,10 @@
     <script src="{{ ASSET_PATH }}/lib/js/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
-    <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
-    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
+    
+    <!--<script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>-->
+    
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
 </html>
