--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -45,7 +45,7 @@
           {% assign pages_list = site.pages %}
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
-          <li class="widget faded fade-out">
+          <li class="widget faded fade-out hidden-phone">
             <a class="dropdown-toggle" data-toggle="dropdown"><table>
               <tr>
                 <td><span id="climate-icon" class="climacon" aria-hidden="true"></span></td>
